--- a/bootstrap-challenge-the_mountain-master/css/style.css
+++ b/bootstrap-challenge-the_mountain-master/css/style.css
@@ -8,3 +8,17 @@
     
 }
 
+@media screen and (max-width: 768px) {
+    #galeriephoto div {
+      width: auto !important;
+      height: 100% !important;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px !important;
+      margin: 0 !important;
+    }
+
+  
+  }
